zero-cost-templating/tests/ui/compile_fail_expand/must_use.stderr
error: unused `Template` that must be used
  --> tests/ui/compile_fail_expand/must_use.rs:19:5
   |
19 |     template.test_template4();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/compile_fail_expand/must_use.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
help: use `let _ = ...` to ignore the resulting value
   |
19 |     let _ = template.test_template4();;
   |     +++++++                          +
